Swagger: Add swagger ui (working)
